--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <div x-show="chartType === 'histogram'">
             <label
               >Number of Bins:
-              <input type="number" x-model="numBins" @input="updateChart()"
+              <input type="number" x-model="numBins" @change="updateChart()"
             /></label>
           </div>
           <div x-show="chartType === 'line'">
@@ -301,11 +301,14 @@
             <input
               type="color"
               x-model="backgroundColor"
-              @input="updateChart()"
+              @change="updateChart()"
           /></label>
           <label
             >Axis Label Color:
-            <input type="color" x-model="axisLabelColor" @input="updateChart()"
+            <input
+              type="color"
+              x-model="axisLabelColor"
+              @change="updateChart()"
           /></label>
           <label>
             Brush Type:
@@ -328,7 +331,7 @@
           </label>
           <label
             >Line Color:
-            <input type="color" x-model="lineColor" @input="updateChart()"
+            <input type="color" x-model="lineColor" @change="updateChart()"
           /></label>
           <label
             >Line Width:
@@ -338,7 +341,7 @@
               min="0.5"
               max="10"
               step="0.5"
-              @input="updateChart()"
+              @change="updateChart()"
           /></label>
           <label>
             Grid Brush Type:
@@ -361,7 +364,7 @@
           </label>
           <label
             >Grid Line Color:
-            <input type="color" x-model="gridLineColor" @input="updateChart()"
+            <input type="color" x-model="gridLineColor" @change="updateChart()"
           /></label>
           <label
             >Grid Line Width:
@@ -371,7 +374,7 @@
               min="0.5"
               max="10"
               step="0.5"
-              @input="updateChart()"
+              @change="updateChart()"
           /></label>
         </div>
       </div>
@@ -414,7 +417,11 @@
               <div>
                 <label
                   >Color 1:
-                  <input type="color" x-model="color1" @input="onColorChange()"
+                  <input
+                    type="color"
+                    x-model="color1"
+                    @input="handleColorInput()"
+                    @change="onColorChange()"
                 /></label>
               </div>
             </template>
@@ -432,6 +439,7 @@
                       type="color"
                       :value="getColorValue(i)"
                       @input="setColorValue(i, $event.target.value)"
+                      @change="onColorChange()"
                     />
                   </label>
                 </template>
@@ -451,6 +459,7 @@
                       type="color"
                       :value="getColorValue(i)"
                       @input="setColorValue(i, $event.target.value)"
+                      @change="onColorChange()"
                     />
                   </label>
                 </template>
@@ -470,6 +479,7 @@
                       type="color"
                       :value="getColorValue(i)"
                       @input="setColorValue(i, $event.target.value)"
+                      @change="onColorChange()"
                     />
                   </label>
                 </template>
@@ -509,7 +519,7 @@
                 min="0"
                 max="1"
                 step="0.01"
-                @input="updateChart()"
+                @change="updateChart()"
             /></label>
             <label
               >Bleed Max:
@@ -519,7 +529,7 @@
                 min="0"
                 max="1"
                 step="0.01"
-                @input="updateChart()"
+                @change="updateChart()"
             /></label>
           </div>
 
@@ -533,7 +543,7 @@
                 min="1"
                 max="20"
                 step="1"
-                @input="updateChart()"
+                @change="updateChart()"
             /></label>
             <label
               >Hatch Angle:
@@ -543,7 +553,7 @@
                 min="0"
                 max="180"
                 step="5"
-                @input="updateChart()"
+                @change="updateChart()"
             /></label>
             <label
               >Hatch Randomness:
@@ -553,7 +563,7 @@
                 min="0"
                 max="1"
                 step="0.05"
-                @input="updateChart()"
+                @change="updateChart()"
             /></label>
             <label
               >Hatch Gradient:
@@ -563,7 +573,7 @@
                 min="0"
                 max="1"
                 step="0.05"
-                @input="updateChart()"
+                @change="updateChart()"
             /></label>
             <label>
               <input
@@ -601,7 +611,7 @@
                 min="0.5"
                 max="10"
                 step="0.5"
-                @input="updateChart()"
+                @change="updateChart()"
             /></label>
           </div>
         </div>
@@ -623,7 +633,7 @@
               x-model="fontSize"
               min="8"
               max="24"
-              @input="updateChart()"
+              @change="updateChart()"
           /></label>
           <label
             >Title Font Size:
@@ -632,7 +642,7 @@
               x-model="titleFontSize"
               min="12"
               max="72"
-              @input="updateChart()"
+              @change="updateChart()"
           /></label>
         </div>
       </div>
@@ -648,15 +658,15 @@
         <div class="collapsible-content" x-show="openSections.dimensions">
           <label
             >Canvas Width:
-            <input type="number" x-model="canvasWidth" @input="updateChart()"
+            <input type="number" x-model="canvasWidth" @change="updateChart()"
           /></label>
           <label
             >Canvas Height:
-            <input type="number" x-model="canvasHeight" @input="updateChart()"
+            <input type="number" x-model="canvasHeight" @change="updateChart()"
           /></label>
           <label
             >Padding:
-            <input type="number" x-model="padding" @input="updateChart()"
+            <input type="number" x-model="padding" @change="updateChart()"
           /></label>
         </div>
       </div>
@@ -788,6 +798,18 @@
             fill: false,
           },
 
+          // Check if on mobile device
+          isMobile() {
+            return window.innerWidth <= 800;
+          },
+
+          // Handle color input changes - only update on desktop
+          handleColorInput() {
+            if (!this.isMobile()) {
+              this.onColorChange();
+            }
+          },
+
           toggleSection(section) {
             this.openSections[section] = !this.openSections[section];
           },
@@ -800,7 +822,7 @@
           setColorValue(index, value) {
             const colorKey = "color" + index;
             this[colorKey] = value;
-            this.onColorChange();
+            this.handleColorInput();
           },
 
           getScatterColorCount() {
