Hide the gaps shown in ios 26 safari

--- a/index.html
+++ b/index.html
@@ -316,11 +316,11 @@
         .mobile-tabs {
           display: block;
           position: fixed;
-          bottom: 0;
+          bottom: -160px;
           left: 0;
           right: 0;
+          height: 200px;
           overflow-x: auto;
-          overflow-y: hidden;
           white-space: nowrap;
           -webkit-overflow-scrolling: touch;
           border-top: 1px solid #000000;
